--- a/packages/@vuepress-reco/style-default/src/client/styles/reset.css
+++ b/packages/@vuepress-reco/style-default/src/client/styles/reset.css
@@ -27,6 +27,7 @@ body {
   direction: ltr;
   /* 像素较小时字体会拼接在一起 */
   text-rendering: optimizeLegibility;
+  transition: background-color 0.3s ease
 }
 
 main {
